# beren

./: .gitignore  .ocamlformat  README.md  _tags  ast.ml  beren.ml  berenc.ml  calc.ml  checker.ml  codegen.ml  dune  dune-project  exec.ml  grammar.txt  lexer.mll  parser.mly  scope.ml  ssa_lexer.mll  ssa_parser.mly  type_inference.ml  typed_ast.ml  types.ml  utils.ml  vm.ml  vmloader.ml
docs/: intro.md  project.md  vm.md
test/: a.brn  basics.brn  datatype.brc  datatype.brn  error.brn  example.brn  expr.brc  expr.brn  foo.brc  foo.brn  func.brn  generics.brn  interface.brn  list.brc  list.brn  math.brc  math.brn  method.brn  option.brn  result.brn  test.brc  test.brn  types.brn  tyvars.brn  variants.brn
test_vm/: test.brc
